--- a/static/css/style.css
+++ b/static/css/style.css
@@ -621,6 +621,9 @@ body {
   -webkit-font-smoothing: antialiased;
   font-size: 14px;
   color: #333;
+}
+
+.home-anduoc{
   background: #f8f8f8;
 }
 
@@ -2253,7 +2256,6 @@ header .wrap-header #header-res .acc-res .content-acc-ress .list-acc-res li a b 
 /*CSS breadcrumbs*/
 
 .breadcrumbs {
-  background-color: #f8f8f8;
   line-height: 46px;
   height: 46px;
 }
